feat: wrapping it up

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,6 @@
     </style>
   </head>
   <body>
-    <deepgram-widget client-token="0123456789abcdef0123456789abcdef"></deepgram-widget>
+    <deepgram-widget agent-client-id="b3693f5baa02987629f72b69e6c7b3a15c51c1f8"></deepgram-widget>
   </body>
 </html>
